fixed spacing

--- a/style.css
+++ b/style.css
@@ -1551,7 +1551,9 @@ nav .fas{
 
     nav .fas{
         display:block;
-        font-size: 25px;
+        font-size: 40px;
+        margin-right: 10px;
+
 
 
     }
